[package]
name = "holaplex-hub-credits"
version = "0.1.0"
authors = ["Holaplex <engineering@holaplex.com>"]
edition = "2021"
description = "Holaplex Hub credits service"
readme = "./README.md"
repository = "https://github.com/holaplex/hub-credits"
license = "AGPL-3.0-or-later"
keywords = ["hub", "holaplex", "web3"]
categories = ["cryptography::cryptocurrencies", "web-programming"]

build = "build.rs"

[lib]

[dependencies]
sea-orm = { version = "0.11.3", features = [
  "debug-print",
  "runtime-tokio-rustls",
  "sqlx-postgres",
] }
poem = { version = "1.3.50", features = ["anyhow", "test", "cookie"] }
async-graphql = { version = "5.0.7", features = [
  "chrono",
  "uuid",
  "log",
  "dataloader",
  "apollo_tracing",
  "decimal",
  "bigdecimal",
] }
prost = "0.11.6"
async-graphql-poem = "5.0.7"
async-stripe = { version = "0.18.3", features = [
  "runtime-tokio-hyper",
  "webhook-events",
] }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.91" }
strum = { version = "0.24.1", features = ["derive"] }

[dependencies.hub-core]
package = "holaplex-hub-core"
version = "0.3.1"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
features = ["kafka", "credits"]

[build-dependencies.hub-core-build]
package = "holaplex-hub-core-build"
version = "0.2.0"
git = "https://github.com/holaplex/hub-core"
branch = "stable"
